test fixing deprecated node version

--- a/.github/workflows/selected_corect_player.yml
+++ b/.github/workflows/selected_corect_player.yml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Print Directory Contents
+        run: ls -al
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
