--- a/.github/workflows/selected_corect_player.yml
+++ b/.github/workflows/selected_corect_player.yml
@@ -1,7 +1,15 @@
 name: Select Correct Player
 
+on:
+  push:
+    branches:
+      - master 
+  pull_request:
+    branches:
+      - master
+
 jobs:
-  update-selected-player:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -10,6 +18,16 @@ jobs:
 
       - name: Checkout Repository
         uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.12.2'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Assuming you have a requirements.txt file
 
       - name: Run Management Command
         run: |
